@@ -4,7 +4,9 @@
   * 更新 內容農場與多導向可能危險網站
   * 更新 個人不想看的廣告或網站
   * 調整 正規化規則歸類到TLD
-  * 調整 LineBot功能
+  * 調整 LineBot功能，更換whois lib
+  * 修復 LineBot功能，回傳多個建立時間
+  * 修復 LineBot功能，回傳多個status，故取消顯示
 
 * 20230424 Update
   * 更新 內容農場與多導向可能危險網站
